# dnd_5e_builder

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.claude/: settings.json
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: ai.py  characters.py  homebrew.py  party.py  resources.py
backend/app/core/: config.py  database.py  logging.py
backend/app/models/: __init__.py  character.py  homebrew.py  party.py
backend/app/schemas/: character.py
backend/app/services/importer/: open5e.py
backend/app/services/rules_engine/: __init__.py  engine.py  tables.py
backend/tests/: test_rules_engine.py
docs/: ARCHITECTURE.md  FEATURES.md  ROADMAP.md
frontend/: Dockerfile  eslint.config.js  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/features/character/: AIAdvisor.tsx  CharacterCard.tsx  CharacterSheet.tsx  CharacterWizard.tsx  DprCalculator.tsx  LevelUpWizard.tsx  ProgressionChart.tsx  ProgressionTimeline.tsx  StatsRadarChart.tsx
frontend/src/hooks/: useAI.ts  useCharacters.ts  useHomebrew.ts  useParty.ts  useResources.ts
frontend/src/lib/: api.ts  logger.ts  utils.ts
frontend/src/pages/: CharacterPage.tsx  CharacterWizardPage.tsx  CharactersPage.tsx  ComparePage.tsx  HomePage.tsx  HomebrewPage.tsx  LevelUpWizardPage.tsx  PartyDetailPage.tsx  PartyPage.tsx  SnapshotPage.tsx
frontend/src/store/: characterStore.ts
frontend/src/types/: dnd.ts
