[project]
name = "dnd-5e-builder-backend"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, variables)
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "S",    # flake8-bandit (security)
    "T20",  # no print statements
    "RUF",  # ruff-specific rules
]
ignore = [
    "S101",  # assert allowed in tests
    "B008",  # FastAPI Depends() in function default
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "T20"]
"app/services/rules_engine/tables.py" = ["E501"]
# SQLAlchemy Mapped annotations must use Optional[X] on Python <3.10
# because SQLAlchemy's own eval() doesn't support the X|Y union syntax.
"app/models/**" = ["UP006", "UP007", "UP035", "UP037"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["alembic/", ".venv/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
